--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,30 +1,64 @@
+//provide a robust linting setup for a Next.js project using TypeScript, React, Tailwind CSS, and Prettier
+
 {
-  "$schema": "https://json.schemastore.org/eslintrc",
-  "root": true,
-  "extends": [
-    "next/core-web-vitals",
-    "prettier",
-    "plugin:tailwindcss/recommended"
-  ],
-  "plugins": ["tailwindcss"],
-  "rules": {
-    "@next/next/no-html-link-for-pages": "off",
-    "react/jsx-key": "off",
-    "tailwindcss/no-custom-classname": "off"
-  },
-  "settings": {
-    "tailwindcss": {
-      "callees": ["cn"],
-      "config": "./tailwind.config.js"
+    "$schema": "https://json.schemastore.org/eslintrc",
+    "root": true,
+    "extends": [
+      "next/core-web-vitals",
+      "prettier",
+      "plugin:tailwindcss/recommended",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:react/recommended"
+    ],
+    "plugins": [
+      "tailwindcss",
+      "@typescript-eslint",
+      "react",
+      "jsx-a11y"
+    ],
+    "rules": {
+      "@next/next/no-html-link-for-pages": "off",
+      "react/jsx-key": "off",
+      "tailwindcss/no-custom-classname": "off",
+      "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+      "react/react-in-jsx-scope": "off",
+      "jsx-a11y/anchor-is-valid": "off",
+      "jsx-a11y/label-has-associated-control": ["error", {
+        "required": {
+          "some": ["nesting", "id"]
+        }
+      }]
     },
-    "next": {
-      "rootDir": ["./"]
-    }
-  },
-  "overrides": [
-    {
-      "files": ["*.ts", "*.tsx"],
-      "parser": "@typescript-eslint/parser"
-    }
-  ]
-}
+    "settings": {
+      "tailwindcss": {
+        "callees": ["cn"],
+        "config": "./tailwind.config.js"
+      },
+      "react": {
+        "version": "detect"
+      },
+      "next": {
+        "rootDir": ["./"]
+      }
+    },
+    "overrides": [
+      {
+        "files": ["*.ts", "*.tsx"],
+        "parser": "@typescript-eslint/parser",
+        "parserOptions": {
+          "project": "./tsconfig.json"
+        },
+        "rules": {
+          "@typescript-eslint/explicit-module-boundary-types": "off",
+          "@typescript-eslint/no-explicit-any": "off"
+        }
+      },
+      {
+        "files": ["*.js", "*.jsx"],
+        "rules": {
+          "@typescript-eslint/no-var-requires": "off"
+        }
+      }
+    ]
+  }
+  
