--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,90 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
-.pnp
+node_modules/
+.pnp/
 .pnp.js
 
-# testing
-coverage
-
-# next.js
-.next/
-out/
-build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
 # local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 .env.development
+.env.staging
+.env.*.local
 
-# turbo
-.turbo
+# testing
+coverage/
+*.lcov
+
+# next.js
+.next/
+out/
+build/
 
 # misc
-.contentlayer
-.env
+.DS_Store
+*.pem
+
+
+# OS generated files
+Thumbs.db
+Desktop.ini
+
+
+
+# turbo
+.turbo/
+
+# misc
+.contentlayer/
 .editorconfig
-.vscode
-.vercel
-supabase
+.vercel/
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+
+# logs
+logs
+*.log
+*.log.*
+log.txt
+
+
+
+
+# lockfiles
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# temporary files
+tmp/
+temp/
+
+# build tools
+dist/
+.cache/
+.parcel-cache/
+public/
+static/
+
+# IDEs and editors
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
